# Smoke

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  postbuild-debug.bat  postbuild-release.bat
no_pressure/: CMakeLists.txt
no_pressure/src/: hybrid_simulator.hh  interface.hh  main.cpp
qml/: main.qml
qml/Components/: AttributeLoader.qml  CButtonIcon.qml  HeaderSection.qml  MyTreeView.qml  qmldir
qml/Components/AttributeControllers/: AttributeButtonInt.qml  AttributeSliderFloat.qml  AttributeSliderInt.qml  qmldir
qml/Utils/: Fonts.qml  Icons.qml  Palette.qml  qmldir
qml/content/: AndroidDelegate.qml  ButtonPage.qml  SliderPage.qml
shaders/: fullscreen.fs.glsl  fullscreen.vs.glsl  fullscreen2.fs.glsl  triangle.fs.glsl  triangle.vs.glsl
shaders/rendering/: 2D.fs.glsl  3D.fs.glsl  SDF_Test1.fs.glsl  texture.fs.glsl
shaders/simulation/: 2D.cs.glsl  SDF_Test1.fs.glsl  compute_shader.cs.glsl
src/: App.cpp  App.hpp  FrameBufferObject.cpp  FrameBufferObject.hpp  MessageHandler.hpp  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp  main.cpp
src/Camera/: Camera.cpp  Camera.hpp  CameraInfos.hpp  CameraState.hpp  CameraState_Idle.cpp  CameraState_Idle.hpp  CameraState_Rotation.cpp  CameraState_Rotation.hpp  CameraState_Translation.cpp  CameraState_Translation.hpp
src/Core/: App.cpp  App.hpp  AppManager.hpp  Attribute.hpp  AttributeListModel.cpp  AttributeListModel.hpp  Base.hpp  FloatAttribute.hpp  MessageHandler.cpp  MessageHandler.hpp
src/Core/Attribute/: Attribute.hpp  AttributeListModel.cpp  AttributeListModel.hpp  FloatAttribute.hpp
src/Renderer/: FrameBufferObject.cpp  FrameBufferObject.hpp  FullscreenShader.cpp  FullscreenShader.hpp  ImageRenderer.cpp  ImageRenderer.hpp  MyQuickFBO.cpp  MyQuickFBO.hpp  MyQuickFBORenderer.cpp  MyQuickFBORenderer.hpp  Renderer.cpp  Renderer.hpp  SdfRenderer.cpp  SdfRenderer.hpp  SdfRenderer2D.cpp  SdfRenderer2D.hpp  SdfRenderer3D.cpp  SdfRendererProperties.cpp  SdfRendererProperties.hpp  SdfRenderer_Params.hpp  SimulatorProperties.cpp  SimulatorProperties.hpp  hybrid_simulator.hpp  timer.hpp
src/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  Triangle2D.cpp  Triangle2D.hpp
src/Simulation/: ComputeShader.cpp  Simulation.cpp  Simulation.hpp  glwrappers.cpp  glwrappers.hpp
src/UI/: Commands.hpp
src/UI/Attribute/: Attribute.cpp  Attribute.hpp  AttributeListModel.cpp  AttributeListModel.hpp  IntAttribute.hpp
src/UI/Tree/: MyTreeModel.cpp  MyTreeModel.hpp  MyTreeNode.cpp  MyTreeNode.hpp
src/Utility/: File.cpp  File.hpp  Math.hpp  ObjectListModel.cpp  ObjectListModel.hpp  Time.cpp  Time.hpp
